force-app/main/default/objects/Excise_Tax_Receipt__c/Excise_Tax_Receipt__c.object-meta.xml
<CustomObject>
    <label>Excise Tax Receipt</label>
    <nameField>
        <displayFormat>ETR-{YYYY}-{MM}-{0000000000}</displayFormat>
        <label>Excise Tax Receipt</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Excise Tax Receipts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>