force-app/main/default/objects/Excise_Tax_Receipt__c/fields/Customer_PO_or_Quote__c.field-meta.xml
<CustomField>
    <fullName>Customer_PO_or_Quote__c</fullName>
    <inlineHelpText>Input to capture customer purchase order, other external platform quotes or orders.</inlineHelpText>
    <label>Customer PO or Quote</label>
    <length>200</length>
    <type>Text</type>
</CustomField>