force-app/main/default/objects/Excise_Tax_Receipt__c/fields/Display_Sample_Order__c.field-meta.xml
<CustomField>
    <fullName>Display_Sample_Order__c</fullName>
    <formula>IF ( Sample_Order__c =True, &quot;Sample Order - Not For Resale&quot;, Null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Display Sample Order</label>
    <type>Text</type>
</CustomField>