force-app/main/default/objects/Excise_Tax_Receipt__c/fields/Distributor_Contact__c.field-meta.xml
<CustomField>
    <fullName>Distributor_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Distributor Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Excise Tax Receipts (Distributor Contact)</relationshipLabel>
    <relationshipName>Excise_Tax_Receipts1</relationshipName>
    <type>Lookup</type>
</CustomField>