force-app/main/default/objects/Excise_Tax_Receipt__c/fields/Distributor_DBA__c.field-meta.xml
<CustomField>
    <fullName>Distributor_DBA__c</fullName>
    <formula>Distributor_Name__r.DBA__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Distributor DBA</label>
    <type>Text</type>
</CustomField>