force-app/main/default/objects/Excise_Tax_Receipt__c/fields/Distributor_Name__c.field-meta.xml
<CustomField>
    <fullName>Distributor_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Distributor Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Excise Tax Receipts (Distributor Name)</relationshipLabel>
    <relationshipName>Excise_Tax_Receipts</relationshipName>
    <type>Lookup</type>
</CustomField>