force-app/main/default/objects/Excise_Tax_Receipt__c/fields/ETR_Status__c.field-meta.xml
<CustomField>
    <fullName>ETR_Status__c</fullName>
    <label>ETR Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Status</valueSetName>
    </valueSet>
</CustomField>