force-app/main/default/objects/Excise_Tax_Receipt__c/fields/Excise_Tax_Acceptance_Date__c.field-meta.xml
<CustomField>
    <fullName>Excise_Tax_Acceptance_Date__c</fullName>
    <inlineHelpText>Date in which Distributor Received Excise Tax Remittance from Receiver</inlineHelpText>
    <label>Excise Tax Acceptance Date</label>
    <type>Date</type>
</CustomField>