force-app/main/default/objects/Excise_Tax_Receipt__c/fields/Excise_Tax_Payment_Form__c.field-meta.xml
<CustomField>
    <fullName>Excise_Tax_Payment_Form__c</fullName>
    <inlineHelpText>Excise Tax Payment Form Remitted by Retail. Either in Cash, Check, Credit Card, Debit or Wire Transfer</inlineHelpText>
    <label>Excise Tax Payment Form</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cash</fullName>
            </value>
            <value>
                <fullName>Check</fullName>
            </value>
            <value>
                <fullName>Credit Card</fullName>
            </value>
            <value>
                <fullName>Debit Card</fullName>
            </value>
            <value>
                <fullName>Wire Transfer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>