force-app/main/default/objects/Excise_Tax_Receipt__c/fields/Excise_Tax_Reconciled_Date__c.field-meta.xml
<CustomField>
    <fullName>Excise_Tax_Reconciled_Date__c</fullName>
    <label>Excise Tax Reconciled Date</label>
    <type>Date</type>
</CustomField>