force-app/main/default/objects/Excise_Tax_Receipt__c/fields/Excise_Tax_Reconciliation_Notes__c.field-meta.xml
<CustomField>
    <fullName>Excise_Tax_Reconciliation_Notes__c</fullName>
    <inlineHelpText>Additional Details Related to Excise Tax Reconciliation</inlineHelpText>
    <label>Excise Tax Reconciliation Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>