force-app/main/default/objects/Excise_Tax_Receipt__c/fields/Invoice__c.field-meta.xml
<CustomField>
    <fullName>Invoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Invoice</label>
    <referenceTo>Invoice__c</referenceTo>
    <relationshipLabel>Excise Tax Receipts</relationshipLabel>
    <relationshipName>Excise_Tax_Receipts</relationshipName>
    <type>Lookup</type>
</CustomField>