force-app/main/default/objects/Excise_Tax_Receipt__c/fields/Opportunity_Name__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity Name</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Excise Tax Receipts</relationshipLabel>
    <relationshipName>Excise_Tax_Receipts</relationshipName>
    <type>Lookup</type>
</CustomField>