force-app/main/default/objects/Excise_Tax_Receipt__c/fields/Receiver_Contact__c.field-meta.xml
<CustomField>
    <fullName>Receiver_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Receiver Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Excise Tax Receipts</relationshipLabel>
    <relationshipName>Excise_Tax_Receipts</relationshipName>
    <type>Lookup</type>
</CustomField>