force-app/main/default/objects/Excise_Tax_Receipt__c/fields/Receiver_License_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Receiver_License_Expiration_Date__c</fullName>
    <formula>Receiver_License__r.License_Expiration_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Receiver License Expiration Date</label>
    <type>Date</type>
</CustomField>