force-app/main/default/objects/Excise_Tax_Receipt__c/fields/Receiver_License_Type__c.field-meta.xml
<CustomField>
    <fullName>Receiver_License_Type__c</fullName>
    <formula>TEXT(Receiver_License__r.License_Type__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Receiver License Type</label>
    <type>Text</type>
</CustomField>