force-app/main/default/objects/Excise_Tax_Receipt__c/fields/Receiver_Name__c.field-meta.xml
<CustomField>
    <fullName>Receiver_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Receiver Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Excise Tax Receipts</relationshipLabel>
    <relationshipName>Excise_Tax_Receipts1</relationshipName>
    <type>Lookup</type>
</CustomField>