force-app/main/default/objects/Excise_Tax_Receipt__c/fields/Retail_Shipping_Manifest__c.field-meta.xml
<CustomField>
    <fullName>Retail_Shipping_Manifest__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Retail Shipping Manifest</label>
    <referenceTo>Shipping_Manifest__c</referenceTo>
    <relationshipLabel>Excise Tax Receipts</relationshipLabel>
    <relationshipName>Excise_Tax_Receipts</relationshipName>
    <type>Lookup</type>
</CustomField>