force-app/main/default/objects/Excise_Tax_Receipt__c/fields/Sales_Order__c.field-meta.xml
<CustomField>
    <fullName>Sales_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Order</label>
    <referenceTo>Sales_Order__c</referenceTo>
    <relationshipLabel>Excise Tax Receipts</relationshipLabel>
    <relationshipName>Excise_Tax_Receipts</relationshipName>
    <type>Lookup</type>
</CustomField>