force-app/main/default/objects/Excise_Tax_Receipt__c/fields/Sample_Order__c.field-meta.xml
<CustomField>
    <fullName>Sample_Order__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Inherited: If checked, result will be (.0001) in cost and price for all downstream objects</inlineHelpText>
    <label>Sample Order</label>
    <type>Checkbox</type>
</CustomField>