force-app/main/default/objects/Excise_Tax_Receipt__c/fields/Supplier_Contact__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Supplier Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Excise Tax Receipts (Supplier Contact)</relationshipLabel>
    <relationshipName>Excise_Tax_Receipts2</relationshipName>
    <type>Lookup</type>
</CustomField>