force-app/main/default/objects/Excise_Tax_Receipt__c/fields/Supplier_Name__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Supplier Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Excise Tax Receipts (Supplier Name)</relationshipLabel>
    <relationshipName>Excise_Tax_Receipts2</relationshipName>
    <type>Lookup</type>
</CustomField>