force-app/main/default/objects/Excise_Tax_Receipt__c/fields/Supplier_Phone__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Phone__c</fullName>
    <formula>Supplier_Contact__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Supplier Phone</label>
    <type>Text</type>
</CustomField>