force-app/main/default/objects/Excise_Tax_Receipt__c/fields/Total_Excise_Tax_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Excise_Tax_Amount__c</fullName>
    <label>Total Excise Tax Amount</label>
    <summarizedField>Excise_Tax_Receipt_Line__c.Line_Total_Excise_Tax__c</summarizedField>
    <summaryForeignKey>Excise_Tax_Receipt_Line__c.Excise_Tax_Receipt__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>