force-app/main/default/objects/Excise_Tax_Receipt__c/fields/Total_Line_Items__c.field-meta.xml
<CustomField>
    <fullName>Total_Line_Items__c</fullName>
    <label>Total Line Items</label>
    <summaryForeignKey>Excise_Tax_Receipt_Line__c.Excise_Tax_Receipt__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>